# company-crud-with-tdd-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
company-server/infra/: server.py
config_project/: config_project.py  docker-compose.yml
src/company_server/: __init__.py  main.py
src/company_server/application/controllers/: company_blueprint.py
src/company_server/application/exceptions/: DuplicateCnpjError.py  create_company_error.py  paginate_company_errors.py
src/company_server/application/use_case/: create_company.py  paginate_company.py
src/company_server/config/: env.py
src/company_server/domain/Repository/: i_company_repository.py
src/company_server/domain/entities/: CNPJ.py  Company.py  UUIDGenerator.py
src/company_server/infra/: server.py
src/company_server/infra/db/: base_pg.py  company_seed_pg.py
src/company_server/infra/db/model/: company_model.py
src/company_server/infra/repository/in_memory/: company_memory_repository.py
src/company_server/infra/repository/postgress_repository/: company_pg_repository.py
src/company_server/infra/repository/postgress_repository/model/: company_model.py
src/tests/integration/Company/: test_create_company.py  test_paginate_company.py
src/tests/unit/: test_CNPJ.py  test_company.py
