[tool.poetry]
name = "company_server"
version = "0.1.0"
description = ""
authors = ["kelwinv <kelwin08@gmail.com>"]
readme = "README.md"
packages = [
  {include = "company_server", from = "src"}
]

[tool.poetry.scripts]
start = "src.company_server.infra.server:app.run"
start_dev = "src.company_server.infra.server:app.run(debug=True)"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
peewee = "^3.16.2"
psycopg2 = "^2.9.6"
flask = "^2.3.2"

[tool.poetry.group.test.dependencies]
mypy = "^1.4.1"
pytest-testmon = "^2.0.12"
pytest-watch = "^4.2.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
